assets/css/styles.scss
/* Styles for the Hello Buffer site
* Author: Andrew E. Mauney
* Since: 0.1
* @chrytonbaine
*/

@import 'icons.css';

$buffergreen: #76b852;
$bufferblue: #168eea;
$andreworange: #FC7F13;

@mixin dib{
	display: inline-block;
	zoom: 1;
	*display: block;
	vertical-align: top;
}
@mixin mza {
	margin:0 auto;
}
@mixin hw ($height, $width: $height){
	height: $height;
	width: $width;
}

body{
	font-family: 'Open Sans', sans-serif;
	font-size: 1em
}

h1{
	font-family: 'Roboto Slab', serif;
	font-size: 2.81em;
}
a{
	text-decoration: none;
	&:hover{
		text-decoration: underline;
	}
}

section{
	h1,h2,h3{
		text-align: center;
		padding: 0 10%;
	}
	h2{font-size: 1.7em;}
	h3{font-size: 1.2em;}
	&#section0{
		.buffer-top{
			position: relative;
			left: 48%;
			width: 0; 
			height: 0; 
			border-left: 33px solid transparent;
			border-right: 33px solid transparent;
			border-bottom: 18px solid black;
		}
		.square1{
			// background: black;
			// width: 18px;
			position: relative;
			left: 48%;
			width: 0; 
			height: 0; 
			border-left: 33px solid transparent;
			border-right: 33px solid transparent;
			border-top: 18px solid black;
			z-index: 5
		}
		.square2{
			position: relative;
			left: 48%;
			width: 0; 
			height: 0; 
			border-left: 33px solid transparent;
			border-right: 33px solid transparent;
			border-top: 18px solid white;
			// background: pink;
			top: -11px;
			z-index: 4;
		}
		.square3{@extend .square1;
			z-index: 3;
			top: -37px;
		}
		.square3top{@extend .buffer-top;
			z-index: 3;
			top: -37px;
		}
		.square4{@extend .square2;
			top: -47px;
			z-index: 2;
		}
		.square5{@extend .square1;
			z-index: 1;
			top: -73px;
		}
		.square5top{@extend .buffer-top;
			z-index: 1;
			top: -73px;
		}
	}
	&#section1{
		text-align: center;
	}
	.buffer-team{
		width: 75%;
		margin: 15px auto;
		.team-member{
			width: 200px;
			margin-right: 15px;
			img{
				width: 200px;
				-webkit-border-radius: 105px;
				-moz-border-radius: 105px;
				border-radius: 105px;
				border: 5px solid #ccc;
			}
			@include dib;
		}
	}
	&#section3{
		background: url('../img/buffer-twitter.png');
		background-size: cover;
	}
	&#section5{
		background: purple;
	}
	.slide{
		background: #76D1F5;
		p{
			width: 50%;
			font-size: 1.438em;
			@include mza;
		}
		a{
			color: white;
		}
		.icon-tron{
			@include hw (70px);
			@include mza;
			background:url('../img/tron_identity_disk_icon.png');
			background-size: contain;
		}
		[class^="icon-"], [class*=" icon-"]{
			text-align: center;
			font-size: 50px;
			margin-bottom: 15px;;
		}
	}
	&#section6, &#section7, &#section9, &#section11{
		background: url('https://raw.github.com/subtlepatterns/SubtlePatterns/gh-pages/white_wall_hash.png');
	}
	&#section12{
		// background: url('https://raw.github.com/subtlepatterns/SubtlePatterns/gh-pages/xv.png');
		background: url("https://raw.github.com/subtlepatterns/SubtlePatterns/gh-pages/argyle.png");
	}
	span.arrow{
		font-size: 1.75em;
		vertical-align: bottom;
		line-height: 1em;
	}
	.bottom-img{
		height: 500px;
		width: 100%;
		position: relative;
		top: 50%;
		background: url('http://baconmockup.com/1300/1200');
		background-size: cover;
	}
	.contact-this{
		@include mza;
		width: 203px;
		font-size: 40px;
		a{
			@include dib;
			color: $buffergreen;
			margin-left: 10px;
			text-decoration: none;
			&:first-child{
				margin-left: 0px;
			}
			&:hover{
				color: $bufferblue;
			}
		}
	}
	.colophon{
		width: 35%;
		color: white;
		@include mza;
		& > ul{
			padding: 0 0 40px 40px;
			li{
				margin-top: 7px;
			}
		}
		h2{
			font-family: 'Yellowtail', cursive;
			font-size: 2.7em;
		}
		a{
			color: $buffergreen;
		}
		.icon-transformers{
			text-align: center;
			font-size: 25px;
			color: transparent;
			&:hover{
				color: white;
			}
		}
	}
	.center-text{
		text-align: center;
	}
}

